Fix site-header and controller z-index

--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ img {
     display: block;
     position: absolute;
     top: 120%;
-    z-index: 1;
+    z-index: 1000;
     background-color: #ffffff;
     width: 80%;
   }
@@ -885,7 +885,7 @@ img {
   width: 100%;
   height: 2px;
   background-color: #f6eac5;
-  z-index: 1000;
+  z-index: 5;
 }
 
 .controller__progressbar-fill {
