--- a/scss/blocks/_controller.scss
+++ b/scss/blocks/_controller.scss
@@ -38,7 +38,7 @@
   width: 100%;
   height: 2px;
   background-color: #f6eac5;
-  z-index: 1000;
+  z-index: 5;
 }
 
 
