--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -70,7 +70,7 @@
     display: block;
     position: absolute;
     top: 120%;
-    z-index: 1;
+    z-index: 1000;
     background-color: $primary-bg-color;
     width: 80%;
   }
